--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="good_18">Good (18%)</string>
     <string name="okay_15">Okay (15%)</string>
     <string name="calculate">Calculate</string>
-    <string name="tip_amount">Enter cost of service</string>
-    <string name="tip_amount_with_percent">Tip Amount: %s</string>
+    <string name="tip_amount">Tip Amount: %s</string>
     <string name="round_up_tip">Round up tip?</string>
 </resources>
